Fix error text alignment

--- a/src/common/diy-input.css
+++ b/src/common/diy-input.css
@@ -53,6 +53,7 @@ input::placeholder {
 }
 
 #error {
+  text-align: left;
   color: var(--input-error-color, red);
   @apply --paper-font-caption;
 }
